--- a/requirements.txt
+++ b/requirements.txt
@@ -39,10 +39,12 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 python-dateutil==2.8.2
 redis==5.0.1
+regex==2023.10.3
 requests==2.31.0
 rsa==4.9
 Shapely==1.8.5.post1
 six==1.16.0
+tiktoken==0.5.1
 tqdm==4.66.1
 urllib3==2.0.6
 vertexai==0.0.1
